# jaceval

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  design-recipe.md  pyproject.toml
arms/irrelevant-ctrl/: SOURCE.md  arm.md
arms/llmdocs/: SOURCE.md  arm.md
arms/no-skill/: arm.md
arms/v0-skill/: SOURCE.md  arm.md
docs/: jac-pitfalls-discovered.md  research-problems.md
docs/findings/: jac-pitfalls.md
docs/journal/: research-log.md
docs/plans/: 2026-04-19-jaceval-v0-implementation.md  2026-04-21-upstream-pr-bidirectional.md  subagent-dispatch-template.md
docs/specs/: 2026-04-19-jaceval-v0-design.md  2026-04-20-pre-registration.md
harness/: detectors.py  generators.py  jac_runner.py  judge.py  plan_builder.py  prompts.py  run.py  scorer.py  stats.py
judge/: prompt.md
judge/validation/: hand_labels.jsonl  rubric_history.md  run_log.md
judge/validation/snippets/: 01.jac  02.jac  03.jac  04.jac  05.jac  06.jac  07.jac  08.jac  09.jac  10.jac  11.jac  12.jac  13.jac  14.jac  15.jac
results/: RESULTS.md
results/mini/: preliminary_summary.json
scripts/: analyze_mini.py  calibrate_task.py  smoke_pilot.py  validate_judge.py
tasks/graph/04/: meta.yaml  prompt.md  rubric.md  solution.jac  tests.jac
tasks/graph/05/: meta.yaml  prompt.md  rubric.md  (+2 more)
tests/: test_analyze_mini.py  test_detectors.py  test_generators.py  test_jac_runner.py  test_judge.py  test_plan_builder.py  test_prompts.py  test_run.py  test_scorer.py  test_smoke.py  test_stats.py
tests/fixtures/: forever.jac  has_failing_test.jac  has_passing_test.jac
(+57 files in other folders)
