[project]
name = "jaceval"
version = "0.1.0"
description = "v0 Jac codegen eval — paired-design benchmark for LLM-generated Jac"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "google-genai>=0.3.0",
  "groq>=0.13.0",
  "numpy>=1.26",
  "scipy>=1.13",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "jac-mcp>=0.1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
